--- a/app/less/filmout.less
+++ b/app/less/filmout.less
@@ -27,9 +27,11 @@
 	}
 	select{
 		line-height: 41px;
-		height: 41px;
+		height: 37px;
 		margin-right: 5px;
 		float: right;
+		box-sizing: content-box;
+		padding: 0 0 0 8px;
 	}
 }
 #filmout_file {
